--- a/index.css
+++ b/index.css
@@ -96,3 +96,9 @@ a {
 a:hover {
     text-decoration: underline;
 }
+#logo{
+border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
