--- a/recipes.css
+++ b/recipes.css
@@ -50,3 +50,8 @@ text-decoration: underline;
     transform: translateX(5px);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
+#vid{
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+}
